--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.android.support:support-v4:23.3.0'
     testCompile 'junit:junit:4.12'
