--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,25 +6,25 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar" >
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.SplashScreen"
-            android:label="@string/app_name" >
+            android:name=".SplashScreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
-                <action android:name="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.MainActivity"/>
+                <action android:name="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.MainActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -34,15 +34,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateHidden">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
-
-
         </activity>
-
-
+        <activity android:name=".MyIntro"></activity>
     </application>
 
 </manifest>
