--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyIntro"></activity>
+        <activity android:name=".MyIntro" />
+        <activity android:name=".DetailActivity"></activity>
     </application>
 
 </manifest>
